test/scc_test/expr/semantic-errors/001.a
001.t:4:7: error: expression must have pointer-to-object type